RESOLVED FIXED188430
Array.prototype.sort should call @toLength instead of ">>> 0"
https://bugs.webkit.org/show_bug.cgi?id=188430
Summary Array.prototype.sort should call @toLength instead of ">>> 0"
Keith Miller
Reported 2018-08-08 20:47:17 PDT
Array.prototype.sort should call @toLength instead of ">>> 0"
Attachments
Patch (3.43 KB, patch)
2018-08-08 20:47 PDT, Keith Miller
no flags
Archive of layout-test-results from ews102 for mac-sierra (2.31 MB, application/zip)
2018-08-08 21:52 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews104 for mac-sierra-wk2 (2.79 MB, application/zip)
2018-08-08 22:01 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews112 for mac-sierra (3.05 MB, application/zip)
2018-08-08 22:28 PDT, EWS Watchlist
no flags
Patch (9.79 KB, patch)
2018-08-08 22:33 PDT, Keith Miller
no flags
Patch (9.94 KB, patch)
2018-08-08 22:35 PDT, Keith Miller
no flags
Archive of layout-test-results from ews103 for mac-sierra (2.44 MB, application/zip)
2018-08-08 23:28 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews104 for mac-sierra-wk2 (2.82 MB, application/zip)
2018-08-08 23:50 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews117 for mac-sierra (3.02 MB, application/zip)
2018-08-09 00:14 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (2.25 MB, application/zip)
2018-08-09 00:30 PDT, EWS Watchlist
no flags
Patch (11.78 KB, patch)
2018-08-09 10:37 PDT, Keith Miller
saam: review+
Keith Miller
Comment 1 2018-08-08 20:47:34 PDT
EWS Watchlist
Comment 2 2018-08-08 21:52:39 PDT
Comment on attachment 346816 [details] Patch Attachment 346816 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/8805778 New failing tests: sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T1.html sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T2.html sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T3.html
EWS Watchlist
Comment 3 2018-08-08 21:52:41 PDT
Created attachment 346819 [details] Archive of layout-test-results from ews102 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 4 2018-08-08 22:01:30 PDT
Comment on attachment 346816 [details] Patch Attachment 346816 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/8805797 New failing tests: sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T1.html sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T2.html sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T3.html
EWS Watchlist
Comment 5 2018-08-08 22:01:32 PDT
Created attachment 346821 [details] Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 6 2018-08-08 22:28:36 PDT
Comment on attachment 346816 [details] Patch Attachment 346816 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/8805836 New failing tests: sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T1.html sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T2.html sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T3.html
EWS Watchlist
Comment 7 2018-08-08 22:28:38 PDT
Created attachment 346822 [details] Archive of layout-test-results from ews112 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-sierra Platform: Mac OS X 10.12.6
Keith Miller
Comment 8 2018-08-08 22:33:36 PDT
Keith Miller
Comment 9 2018-08-08 22:35:19 PDT
EWS Watchlist
Comment 10 2018-08-08 23:28:40 PDT
Comment on attachment 346824 [details] Patch Attachment 346824 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/8806499 New failing tests: sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T2.html sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T3.html
EWS Watchlist
Comment 11 2018-08-08 23:28:42 PDT
Created attachment 346825 [details] Archive of layout-test-results from ews103 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews103 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 12 2018-08-08 23:49:58 PDT
Comment on attachment 346824 [details] Patch Attachment 346824 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/8806544 New failing tests: sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T2.html sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T3.html
EWS Watchlist
Comment 13 2018-08-08 23:50:00 PDT
Created attachment 346827 [details] Archive of layout-test-results from ews104 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews104 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 14 2018-08-09 00:14:01 PDT
Comment on attachment 346824 [details] Patch Attachment 346824 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/8806564 New failing tests: sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T2.html sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T3.html
EWS Watchlist
Comment 15 2018-08-09 00:14:03 PDT
Created attachment 346828 [details] Archive of layout-test-results from ews117 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews117 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 16 2018-08-09 00:30:17 PDT
Comment on attachment 346824 [details] Patch Attachment 346824 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/8806589 New failing tests: sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T2.html sputnik/Conformance/15_Native_Objects/15.4_Array/15.4.4/15.4.4.11_Array_prototype_sort/S15.4.4.11_A4_T3.html
EWS Watchlist
Comment 17 2018-08-09 00:30:19 PDT
Created attachment 346829 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.13.4
Keith Miller
Comment 18 2018-08-09 10:37:00 PDT
Saam Barati
Comment 19 2018-08-09 10:51:23 PDT
Comment on attachment 346842 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=346842&action=review > JSTests/ChangeLog:8 > + * test262/expectations.yaml: can we add a non test262 test as well.
Keith Miller
Comment 20 2018-08-09 10:55:42 PDT
Comment on attachment 346842 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=346842&action=review >> JSTests/ChangeLog:8 >> + * test262/expectations.yaml: > > can we add a non test262 test as well. That seems unnecessary. Unless the spec changes here I don't see why we would start failing this test again and not flag it.
Saam Barati
Comment 21 2018-08-09 10:57:33 PDT
(In reply to Keith Miller from comment #20) > Comment on attachment 346842 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=346842&action=review > > >> JSTests/ChangeLog:8 > >> + * test262/expectations.yaml: > > > > can we add a non test262 test as well. > > That seems unnecessary. Unless the spec changes here I don't see why we > would start failing this test again and not flag it. 👍🏼
Keith Miller
Comment 22 2018-08-09 11:02:13 PDT
Radar WebKit Bug Importer
Comment 23 2018-08-09 11:03:36 PDT
Note You need to log in before you can comment on or make changes to this bug.